--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,22 @@
 /*  your css code here. If applicable */
+div{
+    position: relative;
+    margin:auto;
+    height: 200px;
+    width: 200px;
+	border: 2px solid black;
+    background-color: lightblue;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+p{
+	font-family:arial;
+	color:purple;
+}
